<resources>
    <string name="app_name">eLibrary</string>
    <string name="odaberi_sliku">ODABERI SLIKU</string>
    <string name="kategorije">KATEGORIJE</string>
    <string name="autori">AUTORI</string>
    <string name="unesite_tekst">Unesite tekst...</string>
    <string name="pretraga">PRETRAGA</string>
    <string name="dodaj_kategoriju">DODAJ KATEGORIJU</string>
    <string name="dodaj_knjigu">DODAJ KNJIGU</string>
    <string name="naslovna_stranica">Naslovna stranica</string>
    <string name="ime_autora">Ime autora</string>
    <string name="naziv_knjige">Naziv knjige</string>
    <string name="zanr_kategorija">Žanr/kategorija:</string>
    <string name="ponisti">PONIŠTI</string>
    <string name="upisi_knjigu">UPIŠI KNJIGU</string>
    <string name="povratak">POVRATAK</string>
    <string name="nema_upisanih_knjiga">NEMA UPISANIH KNJIGA</string>
    <string name="molimo_popunite_sva_polja">MOLIMO POPUNITE SVA POLJA</string>
    <string name="molimo_izaberite_sliku">MOLIMO IZABERITE SLIKU</string>
    <string name="autor">Autor</string>
    <string name="broj_knjiga">Broj knjiga</string>
    <string name="knjiga_upisana">KNJIGA UPISANA</string>
    <string name="knjige">Knjige:</string>
    <string name="dodaj_knjigu_online">DODAJ KNJIGU ONLINE</string>
    <string name="nema_dohvacenih_knjiga">Nema dohvacenih knjiga!</string>
    <string name="obrada_podataka_je_zapoceta">Obrada podataka je zapoceta!</string>
    <string name="knjige_uspjesno_dohvacene">Knjige uspjesno dohvacene!</string>
    <string name="kontakt_email">Kontakt e-mail:</string>
    <string name="posalji_email">POŠALJI E-MAIL</string>
    <string name="nepostojeca_email_adresa">NEPOSTOJEĆA E-MAIL ADRESA</string>
    <string name="preporuci_knjigu">PREPORUČI KNJIGU</string>
    <string name="datum_objavljivanja">Datum objavljivanja:</string>
    <string name="broj_stranica">Broj stranica:</string>
    <string name="opis">Opis:</string>
    <string name="naziv_knjige_2">Naziv knjige:</string>
    <string name="datum_objavljivanja_2">DATUM OBJAVLJIVANJA:</string>
    <string name="broj_stranica_2">BROJ STRANICA:</string>
    <string name="autor_2">AUTOR:</string>
    <string name="opis_2">OPIS:</string>
</resources>
