<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
            android:background="@color/boja_pozadine">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="21dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/naslovna_stranica"
                android:textAlignment="center"
                android:textColor="@color/bijela"
                android:textSize="15dp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/naslovnaStr"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/unknownbook" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ime_autora"
                android:textColor="@color/bijela"
                android:textSize="20dp"
                android:textStyle="italic" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/naziv_knjige"
                android:textAlignment="center"
                android:textColor="@color/bijela"
                android:textSize="20dp"
                android:textStyle="italic" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="100dp"
                android:layout_height="17dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/imeAutora"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/bijela"
                android:ems="10"
                android:hint="@string/unesite_tekst"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/nazivKnjige"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/bijela"
                android:ems="10"
                android:hint="@string/unesite_tekst"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dNadjiSliku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bijela"
                android:text="@string/odaberi_sliku"
                android:textColor="@color/crna"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="80dp"
                android:layout_height="14dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zanr_kategorija"
                android:textColor="@color/bijela"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sKategorijaKnjige"
                android:layout_width="194dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Space
                android:layout_width="100dp"
                android:layout_height="14dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dPonisti"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bijela"
                android:text="@string/ponisti"
                android:textColor="@color/crna"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="82dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dUpisiKnjigu"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bijela"
                android:text="@string/upisi_knjigu"
                android:textColor="@color/crna"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>